--- a/index.html
+++ b/index.html
@@ -1,42 +1,120 @@
-
-<div id="abc" style="display:none">4193</div>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>COMAC</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>comac.global</title>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+        <style media="screen" type="text/css">
+                html {
+                        height:100%;
+                }
+                body {
+                        color: #fff; 
+                        margin: 0;
+                        font-family: 'Montserrat', sans-serif;
+                        font-style: normal;
+                        font-size: 14px;
+                        line-height: 22px;
+                        height: 100%; 
+                        background-color: #fff;
+                }
+                h1 {
+                        margin-top: 20px;
+                        font-size: 50px;
+                        opacity: 1;
+                }
+                @media all and (max-width: 980px) {
+                        h1 {
+                                font-size: 35px;
+                        }
+                        .under-construction p {
+                                font-size: 20px;
+                        }
+                }
+                @media all and (max-width: 767px) {
+                        h1 {
+                                font-size: 28px;
+                        }
+                        .under-construction p {
+                                font-size: 16px;
+                        }
+                }
+                h2 {
+                        font-style: normal;
+                        font-size: 14px;
+                        line-height: 22px;
+                        margin: 0;
+                }
+                .wrap {
+                        height: auto; 
+                        min-height: 100%; 
+                        background-color: #00509D;
+                }
+                .domain {
+                        position: absolute; 
+                        text-align: center; 
+                        width: 50%; 
+                        margin-left: -25%; 
+                        top: 42.5%;
+                        left: 50%;
+                }
 
-<style>
-* {
-	margin:0px;
-	padding:0px;
-	outline:none;
-}
-body {
-	background: #004ea2;
-	overflow:hidden;
-}
-#animate{
--webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    color: #DAD7CD;
-    font-family: 'Sigmar One', cursive;
-    margin: 0px;
-    display: block;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    font-size: 100px;
-    height: 100px;
-    line-height: 100px;
-    margin-top: -50px;
-}
-</style>
+                .footer {
+                        text-align: center;
+                        color:#DCDCDC; 
+                        margin:auto;
+                        padding:15px 20px 18px 20px;
+                        position:relative;
+                        clear:both;
+                        height:40px;
+                        margin-top:-73px;
+                        background-color:#444;
+                        font-size: 12px;
+                        line-height: 22px;
+                }
+                p {
+                        margin: 0;
+                }
+
+                .footer a {
+                        color:#DCDCDC; 
+                }
+                p.description {
+                    padding-top: 10px;
+                    font-size: 18px;
+                }
+                .avoori-logo {
+                    margin: 20px;
+                    max-width: 40px;
+                }
+                .under-construction {
+                    position: absolute; 
+                    text-align: center; 
+                    width: 100%; 
+                    bottom: 5%;
+                    font-size: 24px;
+                    line-height: 1;   
+                    font-weight: 300;
+                }
+                img {
+                    filter: brightness(0) invert(1);
+                }
+
+        
+        </style>
+</head>
 <body>
-    <h2 id="animate" class="animate" style="font-size: 100px; height: 100px; line-height: 100px; margin-top: -50px;">
-        <div style="text-align:center">
-            COMAC
+        <div class="wrap">
+                <!-- <a href="https://comac.global/"><img class="avoori-logo" src="favicon.png" alt="comac.global logo"></a> -->
+                <div class="domain" style="background-color: #88B915;">
+                        <h1 id="site_domain">comac.global</h1>
+                </div>
+                <div class="under-construction">
+                        <p>Under construction.</p>
+                </div>
         </div>
-      </h2>
+        <!-- <script>
+            document.getElementById("site_domain").innerHTML = window.location.hostname;
+        </script> -->
 </body>
 </html>
