--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 .wrap {
                         height: auto; 
                         min-height: 100%; 
-                        background-color: #00509D;
+                        background-color: #3B4251;
                 }
                 .domain {
                         position: absolute; 
@@ -106,7 +106,7 @@
 <body>
         <div class="wrap">
                 <!-- <a href="https://comac.global/"><img class="avoori-logo" src="favicon.png" alt="comac.global logo"></a> -->
-                <div class="domain" style="background-color: #88B915;">
+                <div class="domain">
                         <h1 id="site_domain">comac.global</h1>
                 </div>
                 <div class="under-construction">
