--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 </div>
                 <div class="under-construction">
                         <p>Under construction.</p>
+                        <p>Sponsored by Dr. Gao</p>
                 </div>
         </div>
         <!-- <script>
